shim/third-party/rust/vendor/annotate-snippets-0.9.1/tests/fixtures/no-color/strip_line_char.txt
error[E0308]: mismatched types
  --> $DIR/whitespace-trimming.rs:4:193
   |
LL | ...                   let _: () = 42ñ
   |                                   ^^ expected (), found integer
   |
